[tool.poetry]
name = "pythonproject10-1"
version = "0.1.0"
description = ""
authors = ["Albert <autelec@yandex.ru>"]
readme = "README.md"
packages = [{include = "pythonproject10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
